# FSOPhantom

./: CMakeLists.txt  FSOPhantom.cc  example geometry.cfg  example mdef - water.mdef  vis.mac
include/: FSOActionInitialization.hh  FSODetectorConstruction.hh  FSOEventAction.hh  FSOPrimaryGeneratorAction.hh  FSORunAction.hh  FSOSteppingAction.hh
src/: FSOActionInitialization.cc  FSODetectorConstruction.cc  FSOEventAction.cc  FSOEventAction.cc.autosave  FSOPrimaryGeneratorAction.cc  FSORunAction.cc  FSOSteppingAction.cc
